--- a/_config.yaml
+++ b/_config.yaml
@@ -2,4 +2,4 @@ name: NiPy Builder
 title: NiPy Builder
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
-# theme: minima
+theme: minima
