--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,8 @@
+name: NiPy Builder
+title: NiPy Builder
+markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
+#theme: jekyll-theme-dinky
+#theme: minima
+show_downloads: false
 theme: jekyll-theme-architect
